# ruokee-skills

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md
.agents/plugins/: marketplace.json
.agents/skills/: code-quality  deep-research  grill-me-plus  ponytail  python-engineering  task
.claude-plugin/: marketplace.json
.claude/skills/: frontend-design  msgspec  naming-guide  stop-slop  with-agents
experimential/deep-research/: README.md
experimential/naming-guide/: README.md
experimential/task/: README.md  meta.toml
experimential/task/core/: pyproject.toml
experimential/task/core/src/task_core/: __init__.py  contracts.py  errors.py  management.py  mcp_server.py  service.py  store.py  yamlio.py
experimential/task/core/tests/: conftest.py  test_binary_smoke.py  test_cli_management.py  test_core_contract.py  test_mcp.py
experimential/with-agents/: README.md  meta.toml
fork/grill-me-plus/: README.md  upstream.toml
fork/stop-slop/: README.md  upstream.toml
plugins/code-quality/: README.md  meta.toml
plugins/deep-research/: README.md  meta.toml
plugins/frontend-design/: README.md  meta.toml
plugins/grill-me-plus/: README.md  meta.toml
plugins/msgspec/: README.md  meta.toml
plugins/naming-guide/: README.md  meta.toml
plugins/ponytail/: README.md  meta.toml
plugins/python-engineering/: README.md  meta.toml
plugins/stop-slop/: README.md  meta.toml
plugins/task/: README.md  (+1 more)
scripts/: check-commit-message  check-plugins.py  check-skill-updates.py  install.py  repository.py
tests/: test_check_skill_updates.py  test_install.py
(+434 files in other folders)
