[project]
name = "ruokee-task-core"
version = "0.1.1"
description = "Deterministic Task core for Ruokee's personal agent harness"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.12,<2",
  "msgspec>=0.19,<1",
  "ruamel-yaml>=0.18,<1",
  "wcwidth>=0.2,<1",
]

[project.scripts]
task-core = "task_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_core"]

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "nuitka>=2.7,<3",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["task_core"]
